--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Proyecto de simulacion de check-in Aerolinea",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently \"tsc -w\" \"nodemon ./dist/ ./dist/index.js\"",
+    "start": "node ./dist/index.js"
   },
   "author": "shockiu",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -21,6 +21,8 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22",
     "sequelize-auto": "^0.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
